# projects

ai_researcher/: .gitignore  ARCHITECTURE.md  README.md  config.yaml  faiss_test.py  logger_test.py  pyproject.toml  run.sh
ai_researcher/app/: main.py  routes.py  schemas.py
ai_researcher/app/core/: embedding_service.py  embeddings.py  llm.py  vector_store.py
ai_researcher/app/data/vector_store/: index.faiss  metadata.json
ai_researcher/app/services/: paper_fetcher.py  rag_service.py  summarizer.py
ai_researcher/app/utils/: logger.py  text_cleaner.py
ai_researcher/frontend/: streamlit_app.py
ai_researcher/frontend/assets/: style.css
chat_PDF/: .gitignore  app.py  products-100.csv  pyproject.toml
chtbot/: app.py  main.py  pyproject.toml  requirements.txt  rough.txt
chtbot/.streamlit/: secrets.toml
doc_reader/: README.md  main.py  pyproject.toml  run_services.sh
doc_reader/auth/: main.py
doc_reader/auth/app/models/: base.py
doc_reader/auth/app/routers/: auth_router.py
doc_reader/auth/app/schemas/: auth_schemas.py  user_schemas.py
doc_reader/auth/app/services/: auth_services.py  hash.py  utilities.py
doc_reader/shared/config/: settings.py
doc_reader/shared/databases/: mongodb_conn  mongodb_conn.py  postgres_conn.py  redis_conn.py
doc_reader/shared/models/: base.py
doc_reader/shared/utils/: database.py
ecom_base/: pyproject.toml
ecom_base/app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
swift/: .gitignore  README.md  check.ipynb  db.py  package-lock.json  psswd.py  pyproject.toml  redis_db.py  requirements.txt  run_services.sh
swift/app/auth/: main.py
swift/app/notifications/: main.py
swift/app/posts/: main.py
swift/app/shared/config/: settings.py
swift/app/shared/models/: base.py
swift/app/shared/utils/: database.py
swift/models/: actions.txt  chats.model.py  comments.model.py  follows.model.py  likes.model.py  media.model.py  subscription.model.py  tweets.model.py  user_model.py  users.model.py
user_auth/: .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  compose.yaml  nginx.conf  pyproject.toml  requirements.txt  wait-for-postgres.sh
user_auth/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
user_auth/frontend/: app.py
