[project]
name = "chtbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.28",
    "langchain-google-genai>=2.1.9",
    "pandas>=2.3.2",
    "pinecone==5.3.0",
    "pinecone-haystack==0.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
]
