[tool.poetry]
name = "swift"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.3"}
bcrypt = "3.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.19"
oauth2 = "^1.9.0.post1"
alembic = "^1.14.1"
sqlmodel = "^0.0.22"
pymongo = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
